<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:text="@string/scan_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/destination_label"
            android:layout_alignTop="@+id/passenger_value"
            android:text="@string/passenger_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/passenger_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/destination_value"
            android:layout_below="@+id/staus_label"
            android:layout_marginTop="27dp"
            android:text="@string/passenger_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/via_label"
            android:layout_marginTop="23dp"
            android:layout_toStartOf="@+id/btnScan"
            android:text="@string/destination_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/destination_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/destination_label"
            android:layout_alignBottom="@+id/destination_label"
            android:layout_marginStart="36dp"
            android:layout_toEndOf="@+id/bus_label"
            android:text="@string/destination_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bus_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/destination_label"
            android:layout_below="@+id/destination_label"
            android:layout_marginTop="23dp"
            android:text="@string/bus_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bus_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bus_label"
            android:layout_alignStart="@+id/destination_value"
            android:text="@string/bus_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bus_label"
            android:layout_below="@+id/bus_label"
            android:layout_marginTop="21dp"
            android:text="@string/loading_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loading_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/loading_label"
            android:layout_alignStart="@+id/bus_value"
            android:text="@string/loading_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/loading_label"
            android:layout_below="@+id/loading_label"
            android:layout_marginTop="24dp"
            android:text="@string/weight_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/weight_label"
            android:layout_alignBottom="@+id/weight_label"
            android:layout_alignStart="@+id/loading_value"
            android:text="@string/weight_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/weight_label"
            android:layout_below="@+id/weight_label"
            android:layout_marginTop="21dp"
            android:text="@string/fee_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fee_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/weight_value"
            android:layout_alignTop="@+id/fee_label"
            android:text="@string/fee_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/staus_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="26dp"
            android:text="@string/status_label"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/staus_label"
            android:layout_alignStart="@+id/passenger_value"
            android:text="@string/status_value"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/via_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="@string/via_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/via_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/via_label"
            android:layout_alignStart="@+id/passenger_value"
            android:text="@string/via_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnScan"
            android:layout_alignEnd="@+id/status_value"
            android:onClick="refreshStat"
            android:text="Refresh"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>